<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">AbonentApp</string>
    <string name="tab_text_1">Добавление</string>
    <string name="tab_text_2">Список абонентов</string>
    <string name="add">Добавить</string>
    <string name="lastname">Фамилия</string>
    <string name="firstname">Имя</string>
    <string name="middlename">Отчество</string>
    <string name="street">Улица/Проспект</string>
    <string name="building">Дом</string>
    <string name="flat">Квартира</string>
    <string name="phone">Номер телефона</string>
    <string name="tarif">Тариф</string>
    <string name="name">Фамилия и имя</string>
    <string name="delete">Удалить</string>
    <string name="new_abonent">Новый абонент</string>
    <string name="tab_text_3">Информация</string>
    <string name="save">Сохранить</string>
    <string name="invalid_lastname">Введите фамилию</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="authorization">Авторизоваться</string>
    <string name="search">Поиск</string>
    <string name="date">Дата регистрации</string>
    <string name="find" tools:ignore="TypographyEllipsis">Найти...</string>
</resources>
