<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <EditText
                android:id="@+id/newlastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:hint="@string/lastname"
                android:inputType="textPersonName"
                android:textAlignment="center"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/newfirstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:hint="@string/firstname"
                android:inputType="textPersonName"
                android:textAlignment="center"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/newmiddlename"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:hint="@string/middlename"
                android:inputType="textPersonName"
                android:textAlignment="center"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/newstreet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:hint="@string/street"
                android:inputType="text"
                android:textAlignment="center"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/newbuilding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:hint="@string/building"
                android:inputType="number"
                android:textAlignment="center"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/newflat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:hint="@string/flat"
                android:inputType="number"
                android:textAlignment="center"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/newphone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:hint="@string/phone"
                android:inputType="phone"
                android:textAlignment="center"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/newtarif"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:hint="@string/tarif"
                android:inputType="text"
                android:textAlignment="center"
                tools:ignore="Autofill" />

            <Button
                android:id="@+id/btn_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/save" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>